Se cambio fondo solo para produccion

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Pisos De Madera GT</title>
     <style type="text/css">
+        body{
+            background-color: #EEEEEE;
+        }
         .center-div{
             width: 80%;
             position: absolute;
